# shapeml

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: reference.md  todo.md
grammars/: castle.shp  castle_brick_arch.shp  farm.shp  gradient_city.shp  hello_house.shp  hello_house_window_frame.shp  l-system_aono_kunii.shp  l-system_header.shp  l-system_leopold.shp  l-system_niklas_kerchner.shp  l-system_talton_acacia.shp  low_poly_forest.shp  test_color_palette.shp  test_functions_and_attributes.shp  test_noise_2D.shp  test_noise_3D.shp  test_occlusion.shp  test_pbr.shp  test_primitives.shp  test_random.shp  test_rendering.shp  test_roofs.shp  test_splits_1D.shp  test_splits_3D.shp  venice_house.shp
src/: shape_maker.cc
src/shapeml/: asset_cache.cc  asset_cache.h  evaluator.h  exporter.cc  exporter.h  expressions.cc  expressions.h  expressions_functions.cc  expressions_test.cc  grammar.cc  grammar.h  interpreter.cc  interpreter.h  interpreter_shape_attributes.cc  interpreter_shape_operations.cc  interpreter_test.cc  interpreter_test_standalone.cc  material.h  shape.cc  shape.h  shape_test_standalone.cc  value.cc  value.h
src/shapeml/geometry/: halfedge_mesh.cc  halfedge_mesh.h  obj_loader.cc  obj_loader.h  octree.cc  octree.h  primitives.cc  primitives.h  ray_plane_bv.cc  ray_plane_bv.h  triangulator.cc  triangulator.h  vector_types.h
src/shapeml/geometry/skeleton/: roof.cc  roof.h  skeleton.cc  skeleton.h  skeleton_test.cc
src/shapeml/parser/: lexer.cc  lexer.h  lexer_test.cc  parser.cc  parser.h  parser_test.cc  token.cc  token.h
src/shapeml/util/: hex_color.cc  hex_color.h  noise.cc  noise.h
src/viewer/: font_roboto.cc  viewer.cc  viewer.h
src/viewer/gl/: init.cc  init.h  objects.cc  objects.h  renderer.cc  renderer.h  shader.cc  shader.h  texture_manager.cc  texture_manager.h  trackball.cc  trackball.h
src/viewer/shaders/: csm.h  debug_render_order.h  deferred.h  forward.h  fullscreen_quad.h  fxaa.h  pbr.h  preamble.h  sao.h  tonemap_gamma_luma.h  transparency.h
